# wallet_tt

./: .env.template  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: lint.yml  python-app.yml
wallet_app/: config.py  entrypoint.sh  exceptions.py  main.py
wallet_app/alembic/: env.py
wallet_app/alembic/versions/: 2025_07_04_0951-9146422e930d_create_wallet_table.py
wallet_app/api/: __init__.py
wallet_app/api/v1/: __init__.py
wallet_app/api/v1/wallets/: crud.py  dependecies.py  views.py
wallet_app/models/: __init__.py  db.py  wallet.py
wallet_app/schemas/: operation.py  wallet.py
wallet_app/tests/: conftest.py  wallet_view.py
wallet_app/tests/wallets_views/: test_create_wallet.py  test_get_balance.py  test_wallet_operation.py
